[tool.poetry]
name = "drf-error-issue"
version = "0.1.0"
description = ""
authors = ["Brent O'Connor <epicserve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
djangorestframework = "^3.11.0"
django-filter = "^2.3.0"
pytest-django = "^3.9.0"
environs = {extras = ["django"], version = "^8.0.0"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
isort = {extras = ["pyproject"], version = "^4.3.21"}

[tool.isort]
line_length = 120
multi_line_output = 5
balanced_wrapping = true
known_django = 'django'
sections = 'FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
skip = 'node_modules'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
